--- a/libs/edit-admin-profile/src/lib/edit-admin-profile.component.html
+++ b/libs/edit-admin-profile/src/lib/edit-admin-profile.component.html
@@ -30,7 +30,7 @@
       <mat-divider></mat-divider>
       <div class='container align-self-start w-50  ml-0 p-4'>
         <div class='row mb-1'>
-          <div class='col-12'>
+          <div class='col-lg-7 col-md-7 col-12'>
             <mat-form-field class='w-100'>
               <mat-label>{{constantDataService.FIELD_NAME.NAME | titlecase}}</mat-label>
               <input matInput autocomplete='no' type='text' formControlName='name' required>
@@ -48,7 +48,7 @@
         </div>
 
         <div class='row'>
-          <div class='col-12'>
+          <div class='col-lg-7 col-md-7 col-12'>
             <mat-form-field class='w-100'>
               <mat-label>{{constantDataService.FIELD_NAME.EMAIL_ID | titlecase}}</mat-label>
               <input matInput autocomplete='no' type='text' formControlName='email' required>
