--- a/libs/forgot-password/src/lib/forgot-password.component.html
+++ b/libs/forgot-password/src/lib/forgot-password.component.html
@@ -12,7 +12,7 @@
       <div class='col-12'>
         <div class='container-fluid p-0'>
           <div class="row mb-2">
-            <div class='col-12 '>
+            <div class='col-lg-10 col-md-10 col-12 '>
               <mat-form-field class='w-100'>
                 <mat-label>Email</mat-label>
                 <input matInput autocomplete='no' type="email" [formControl]="email" required>
@@ -24,7 +24,7 @@
             </div>
           </div>
           <div class='row'>
-            <div class='col-12  d-flex align-items-center justify-content-between'>
+            <div class='col-lg-10 col-md-11 col-12  d-flex align-items-center justify-content-between'>
               <div class="d-flex">
                 <button class="mr-3" mat-flat-button color='primary' type='submit'
                         [disabled]="store.isForgotLoading$ | async">
