--- a/libs/shared/ui/dashboard-user-demographic/src/lib/dashboard-user-demographic.component.html
+++ b/libs/shared/ui/dashboard-user-demographic/src/lib/dashboard-user-demographic.component.html
@@ -30,7 +30,7 @@
 <ng-template #statsLoadingElse>
   <div class='container-fluid p-0'>
     <div class='row mb-4'>
-      <div class='col-6'>
+      <div class='col-6 mb-2'>
         <mat-card class='pl-1'>
           <div class='container-fluid p-0'>
             <div class='row'>
@@ -52,12 +52,17 @@
                         [options]='chartOptionsFemale'
                 >
                 </canvas>
+                <div class='row ' >
+                  <div class='col-12 text-center'>
+                    <h5 class='mat-h5 font-weight-bolder mb-0 text-color__primary font-calibri'>Age Group</h5>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </mat-card>
       </div>
-      <div class='col-6'>
+      <div class='col-6 mb-2'>
         <mat-card class='pl-2'>
           <div class='container-fluid p-0'>
             <div class='row'>
@@ -79,12 +84,17 @@
                   [legend]='chartLegend'
                   [options]='chartOptionsMale'
                 ></canvas>
+                <div class='row ' >
+                  <div class='col-12 text-center'>
+                    <h5 class='mat-h5 font-weight-bolder mb-0 text-color__primary font-calibri'>Age Group</h5>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
         </mat-card>
       </div>
-      <div class='col-6'>
+      <div class='col-6 mb-2'>
         <mat-card class='pl-1'>
           <div class='container-fluid p-0'>
             <div class='row'>
@@ -106,6 +116,11 @@
                         [options]='chartOptionsBinary'
                 >
                 </canvas>
+                <div class='row ' >
+                  <div class='col-12 text-center'>
+                    <h5 class='mat-h5 font-weight-bolder mb-0 text-color__primary font-calibri'>Age Group</h5>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
@@ -134,18 +149,19 @@
                   [data]='$any(ratioChartData)'
                   [labels]='doughnutChartLabel'
                   [legend]='chartLegend'
+                  [options]='chartOptions'
                 ></canvas>
               </div>
               <div class='col-6 d-flex flex-column justify-content-around'>
                 <div class='container-fluid p-0 w-100'>
                   <div class='row mb-2'>
                     <div class='col-12'>
-                      <button class='w-100' mat-stroked-button [ngStyle]='{"color": colors.female}'>
+                      <button class='w-100' mat-stroked-button [ngStyle]='{"color": colors.male}'>
                         <div class='d-flex align-items-center pt-1 py-0'>
-                          <mat-icon>female</mat-icon>
+                          <mat-icon>male</mat-icon>
                           <div class='d-flex flex-column align-items-center' [ngStyle]='{width: "calc(100% - 42px)"}'>
-                            <h4 class='mat-h4 m-0'>Female</h4>
-                            <h2 class='mat-h2 m-0' [ngStyle]='{"color": colors.female}'>{{femalePercentage}} %</h2>
+                            <h4 class='mat-h4 m-0'>Male</h4>
+                            <h2 class='mat-h2 m-0' [ngStyle]='{"color": colors.male}'>{{malePercentage}} %</h2>
                           </div>
                         </div>
                       </button>
@@ -166,12 +182,12 @@
                   </div>
                   <div class='row'>
                     <div class='col-12'>
-                      <button class='w-100' mat-stroked-button [ngStyle]='{"color": colors.male}'>
+                      <button class='w-100' mat-stroked-button [ngStyle]='{"color": colors.female}'>
                         <div class='d-flex align-items-center pt-1 py-0'>
-                          <mat-icon>male</mat-icon>
+                          <mat-icon>female</mat-icon>
                           <div class='d-flex flex-column align-items-center' [ngStyle]='{width: "calc(100% - 42px)"}'>
-                            <h4 class='mat-h4 m-0'>Male</h4>
-                            <h2 class='mat-h2 m-0' [ngStyle]='{"color": colors.male}'>{{malePercentage}} %</h2>
+                            <h4 class='mat-h4 m-0'>Female</h4>
+                            <h2 class='mat-h2 m-0' [ngStyle]='{"color": colors.female}'>{{femalePercentage}} %</h2>
                           </div>
                         </div>
                       </button>
