--- a/libs/pack/pack-listing/src/lib/pack-listing.component.html
+++ b/libs/pack/pack-listing/src/lib/pack-listing.component.html
@@ -65,7 +65,7 @@
                         </span>
                       </div>
                     </th>
-                    <td mat-cell *matCellDef='let element'> {{((element.lessons?.length) || 0)}} </td>
+                    <td mat-cell *matCellDef='let element'> {{getLessonsCount(element) || 0}} </td>
                   </ng-container>
                   <ng-container matColumnDef='content'>
                     <th mat-header-cell
