--- a/libs/shared/ui/pack-selector/src/lib/pack-selector.component.html
+++ b/libs/shared/ui/pack-selector/src/lib/pack-selector.component.html
@@ -39,7 +39,7 @@
                 <table mat-table [dataSource]='packs' class='w-100' [trackBy]='trackById'>
 
                   <ng-container matColumnDef='select'>
-                    <th mat-header-cell *matHeaderCellDef>
+                    <th mat-header-cell [width]='75' *matHeaderCellDef>
                     </th>
                     <td mat-cell *matCellDef='let pack'>
                       <mat-checkbox
