fix(test-selector): Enable cat filter is combined data content selection

--- a/libs/shared/ui/test-selector/src/lib/test-selector.component.html
+++ b/libs/shared/ui/test-selector/src/lib/test-selector.component.html
@@ -102,7 +102,7 @@
                   </span>
                         <div class='d-flex align-items-center'>
                           <button mat-icon-button class='mr-3' [matMenuTriggerFor]='typeMenu'
-                                  [disabled]='(store.isActing$ | async) || this.categoryData.type === contentSelectorOpType.SINGLE'
+                                  [disabled]='(store.isActing$ | async) || (this.categoryData.type === contentSelectorOpType.SINGLE && !this.categoryData?.limit)'
                                   color='{{filters.controls.category?.value ? "primary" : ""}}'>
                             <mat-icon style='font-size: 20px'>filter_list</mat-icon>
                           </button>
