--- a/libs/shared/ui/dashboard-user-demographic/src/lib/dashboard-user-demographic.component.html
+++ b/libs/shared/ui/dashboard-user-demographic/src/lib/dashboard-user-demographic.component.html
@@ -100,7 +100,7 @@
             <div class='row'>
               <div class='col-12'>
                 <div class='d-flex align-items-center mb-3 pl-2'>
-                  <mat-icon color='primary' class='mr-1 card-icon'>female</mat-icon>
+                  <mat-icon color='primary' class='mr-1 card-icon'>remove</mat-icon>
                   <h4 class='mat-h4 mb-0 text-color__primary font-calibri'>Non Binary Age Group</h4>
                 </div>
               </div>
