--- a/libs/test/test-create/src/lib/test-create.component.html
+++ b/libs/test/test-create/src/lib/test-create.component.html
@@ -48,8 +48,7 @@
                               <mat-form-field appearance='fill' class='w-100'>
                                 <mat-label>Category</mat-label>
                                 <mat-select formControlName='category'>
-                                  <mat-option *ngIf='opType !== opTypeEnum.EDIT || !selectedTest?.isPublished'
-                                              [value]='"NONE"'>None
+                                  <mat-option [value]='"NONE"'>None
                                   </mat-option>
                                   <mat-option *ngFor='let type of testCatTypeIte'
                                               [value]=type>{{type  | replaceUnderscore | titlecase}}</mat-option>
@@ -1141,7 +1140,8 @@
                                   <div class='col-12'>
                                     <mat-form-field class='w-100'>
                                       <mat-label>Value y - Type</mat-label>
-                                      <mat-select [disabled]='disableEditState' formControlName='inputType' (valueChange)='resetProfileInputUnit()'>
+                                      <mat-select (valueChange)='resetProfileInputUnit()' [disabled]='disableEditState'
+                                                  formControlName='inputType'>
                                         <mat-option *ngFor='let inp of profileInputTypeIte'
                                                     [value]='inp'>{{inp | distanceLength | titlecase}}</mat-option>
                                       </mat-select>
@@ -1302,9 +1302,7 @@
                               <div class='row'>
                                 <div class='col-12'>
                                   <hidden-innovation-common-form-field-textarea
-                                    [disabled]='disableEditState'
                                     [label]='constantDataService.FIELD_NAME.RESULT_EXPLANATION | titlecase'
-                                    [readonly]='disableEditState'
                                     controlPath='resultExplanation'
                                   ></hidden-innovation-common-form-field-textarea>
                                 </div>
