fix(ui): featured lockout validation

--- a/libs/shared/ui/common-form-field-number/src/lib/common-form-field-number.component.html
+++ b/libs/shared/ui/common-form-field-number/src/lib/common-form-field-number.component.html
@@ -14,6 +14,9 @@
       <ng-container *ngIf='error?.min'>
         Invalid! Must be greater than {{control.errors?.min?.min}} <br>
       </ng-container>
+      <ng-container *ngIf='error?.minNumber'>
+        {{errorMessage.minLength}} <br>
+      </ng-container>
     </ng-template>
   </mat-error>
 </mat-form-field>
