--- a/libs/assessment/assessment-create/src/lib/assessment-create.component.html
+++ b/libs/assessment/assessment-create/src/lib/assessment-create.component.html
@@ -65,10 +65,11 @@
                 </div>
                 <div class='row mb-2'>
                   <div class='col-12'>
-                    <hidden-innovation-common-form-field
+                    <hidden-innovation-common-form-field-number
                       controlPath='lockout'
                       label='lockout(Days)'
-                    ></hidden-innovation-common-form-field>
+                      [errorMessage]=formValidationService.lockOutValidationMessage
+                    ></hidden-innovation-common-form-field-number>
                   </div>
                 </div>
                 <div class='row mb-3'>
