--- a/libs/shared/ui/dashboard-user-demographic/src/lib/dashboard-user-demographic.component.html
+++ b/libs/shared/ui/dashboard-user-demographic/src/lib/dashboard-user-demographic.component.html
@@ -30,7 +30,7 @@
 <ng-template #statsLoadingElse>
   <div class='container-fluid p-0'>
     <div class='row mb-4'>
-      <div class='col-6 mb-2'>
+      <div class='col-lg-4 mb-2'>
         <mat-card class='pl-1'>
           <div class='container-fluid p-0'>
             <div class='row'>
@@ -62,7 +62,7 @@
           </div>
         </mat-card>
       </div>
-      <div class='col-6 mb-2'>
+      <div class='col-lg-4 mb-2'>
         <mat-card class='pl-2'>
           <div class='container-fluid p-0'>
             <div class='row'>
@@ -94,7 +94,7 @@
           </div>
         </mat-card>
       </div>
-      <div class='col-6 mb-2'>
+      <div class='col-lg-4 mb-2'>
         <mat-card class='pl-1'>
           <div class='container-fluid p-0'>
             <div class='row'>
@@ -128,7 +128,7 @@
       </div>
     </div>
     <div class='row'>
-      <div class='col-12'>
+      <div class='col-lg-8 col-md-6'>
         <mat-card>
           <div class='container-fluid p-0'>
             <div class='row'>
@@ -152,7 +152,7 @@
                   [options]='chartOptions'
                 ></canvas>
               </div>
-              <div class='col-6 d-flex flex-column justify-content-around'>
+              <div class='col-6 mt-4 d-flex flex-column justify-content-around'>
                 <div class='container-fluid p-0 w-100'>
                   <div class='row mb-2'>
                     <div class='col-12'>
