feat(assessment): test group add

--- a/libs/assessment/assessment-create/src/lib/assessment-create.component.html
+++ b/libs/assessment/assessment-create/src/lib/assessment-create.component.html
@@ -118,6 +118,9 @@
                 <button (click)='openTestSelector()' mat-menu-item type='button'>
                   <span>Test Single</span>
                 </button>
+                <button (click)='openTestGroupSelector()' mat-menu-item type='button'>
+                  <span>Test Group</span>
+                </button>
                 <button (click)='openQuestionnaireSelector()' mat-menu-item type='button'>
                   <span>Questionnaire</span>
                 </button>
