feat(dashboard): No spelling

--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -58,7 +58,7 @@
                 [chartData]='$any(store.registeredUsersData$ | async)'
                 [chartLabels]='$any(store.registeredUsersLabel$ | async)'
                 [isLoading]='(store.isLineChartLoading$ | async)'
-                chartOpt='No of Registered users'
+                chartOpt='No. of Registered users'
                 icon='how_to_reg'
                 label='Registered Users'></hidden-innovation-line-chart>
             </div>
@@ -67,7 +67,7 @@
                 [chartData]='$any(store.activeUserData$ | async)'
                 [chartLabels]='$any(store.activeUserLabel$ | async)'
                 [isLoading]='(store.isLineChartLoading$ | async)'
-                chartOpt='No of Active users'
+                chartOpt='No. of Active users'
                 icon='sports_martial_arts'
                 label='Active Users'></hidden-innovation-line-chart>
             </div>
