--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -152,8 +152,8 @@
                 <table mat-table [dataSource]='topWatchedTable' class='w-100'>
                   <ng-container matColumnDef='position'>
                     <th mat-header-cell *matHeaderCellDef>{{'Position' | titlecase}}</th>
-                    <td mat-cell *matCellDef='let element'
-                    > {{(element.position) || '--'}} </td>
+                    <td mat-cell *matCellDef='let element,  let i = index'
+                    > {{(i+1) || '--'}} </td>
                   </ng-container>
                   <ng-container matColumnDef='name'>
                     <th mat-header-cell  *matHeaderCellDef>{{'Test Name' | titlecase}}</th>
@@ -200,8 +200,8 @@
                 <table mat-table [dataSource]='packEngTable' class='w-100'>
                   <ng-container matColumnDef='position'>
                     <th mat-header-cell *matHeaderCellDef>{{'Position' | titlecase}}</th>
-                    <td mat-cell *matCellDef='let element'
-                    > {{(element.position) || '--'}} </td>
+                    <td mat-cell *matCellDef='let element, let i = index'
+                    > {{i+1 || '--'}} </td>
                   </ng-container>
                   <ng-container matColumnDef='name' >
                     <th mat-header-cell  *matHeaderCellDef >{{'Pack Name' | titlecase}}</th>
