--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -17,36 +17,36 @@
                                                       cardTitle='Total App Downloads'
                                                       icon='file_download'></hidden-innovation-dashboard-count-card>
             </div>
-            <div class='col-md-12 col-lg-6 mt-lg-0 mt-3'>
+            <div class='col-md-12 col-lg-4 mt-lg-0 mt-3'>
               <mat-card class='bg-light h-100' style='padding: 10px'>
                 <div class='container-fluid p-0'>
                   <div class='row'>
-                    <div class='col-6'>
+                    <div class='col-12'>
                       <hidden-innovation-common-form-field-date
-                        *ngIf='rangeFilterGroup.value.type === dashboardRangeFilterEnum.DAILY'
+
                         [maxDate]='maxDate'
                         endControlPath='end'
                         startControlPath='start'></hidden-innovation-common-form-field-date>
-                      <hidden-innovation-common-form-field-month
-                        *ngIf='rangeFilterGroup.value.type === dashboardRangeFilterEnum.MONTHLY'
-                        [maxDate]='maxDate'
-                        controlPath='start'></hidden-innovation-common-form-field-month>
-                      <hidden-innovation-common-form-field-week
-                        *ngIf='rangeFilterGroup.value.type === dashboardRangeFilterEnum.WEEKLY'
-                        [maxDate]='maxDate'
-                        endControlPath='end'
-                        startControlPath='start'></hidden-innovation-common-form-field-week>
+<!--                      <hidden-innovation-common-form-field-month-->
+<!--                        *ngIf='rangeFilterGroup.value.type === dashboardRangeFilterEnum.MONTHLY'-->
+<!--                        [maxDate]='maxDate'-->
+<!--                        controlPath='start'></hidden-innovation-common-form-field-month>-->
+<!--                      <hidden-innovation-common-form-field-week-->
+<!--                        *ngIf='rangeFilterGroup.value.type === dashboardRangeFilterEnum.WEEKLY'-->
+<!--                        [maxDate]='maxDate'-->
+<!--                        endControlPath='end'-->
+<!--                        startControlPath='start'></hidden-innovation-common-form-field-week>-->
                     </div>
-                    <div class='col-6'>
-                      <mat-form-field class='w-100'>
-                        <mat-label>Range Filter</mat-label>
-                        <mat-select formControlName='type'>
-                          <mat-option *ngFor='let op of dashboardRangeTypes'
-                                      [value]='op'>{{op | titlecase}}
-                          </mat-option>
-                        </mat-select>
-                      </mat-form-field>
-                    </div>
+<!--                    <div class='col-6'>-->
+<!--                      <mat-form-field class='w-100'>-->
+<!--                        <mat-label>Range Filter</mat-label>-->
+<!--                        <mat-select formControlName='type'>-->
+<!--                          <mat-option *ngFor='let op of dashboardRangeTypes'-->
+<!--                                      [value]='op'>{{op | titlecase}}-->
+<!--                          </mat-option>-->
+<!--                        </mat-select>-->
+<!--                      </mat-form-field>-->
+<!--                    </div>-->
                   </div>
                 </div>
               </mat-card>
@@ -84,7 +84,7 @@
           [nonBinaryBarData]='store.nonBinaryUsers$ | async'
           [ratioChartData]='store.ageRatioData$ | async'></hidden-innovation-dashboard-user-demographic>
       </div>
-      <div class='col-lg-6 col-md-12  mt-4'>
+      <div class='col-lg-12 col-md-12  mt-4'>
         <mat-card class='p-0'>
 
           <div class='container-fluid p-0'>
@@ -103,13 +103,18 @@
                 <table mat-table [dataSource]='assessmentTestTable' class='w-100'>
                   <ng-container matColumnDef='position'>
                     <th mat-header-cell *matHeaderCellDef>{{'Position' | titlecase}}</th>
-                    <td mat-cell *matCellDef='let element'
-                        > {{(element.position) || '--'}} </td>
+                    <td mat-cell *matCellDef='let element,let i = index'
+                        > {{i+1 || '--'}} </td>
                   </ng-container>
                   <ng-container matColumnDef='name'>
                     <th mat-header-cell  *matHeaderCellDef>{{'Assessment Name' | titlecase}}</th>
                     <td mat-cell *matCellDef='let element'
                         [matTooltip]='element.name'> {{(element.name) || '--'}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef='category'>
+                    <th mat-header-cell  *matHeaderCellDef>{{'Assessment category' | titlecase}}</th>
+                    <td mat-cell *matCellDef='let element'
+                        [matTooltip]='element.category'> {{(element.category) || '--'}} </td>
                   </ng-container>
                   <ng-container matColumnDef='id'>
                     <th mat-header-cell *matHeaderCellDef>{{'Assessment Id' | titlecase}}</th>
@@ -128,55 +133,6 @@
                   </ng-container>
                   <tr mat-header-row *matHeaderRowDef='displayedColumnsAssessmentTest'></tr>
                   <tr mat-row *matRowDef='let row; columns: displayedColumnsAssessmentTest;' class='row-react'></tr>
-                </table>
-              </div>
-            </div>
-          </div>
-        </mat-card>
-      </div>
-      <div class='col-lg-6 col-md-12  mt-4'>
-        <mat-card class='p-0'>
-
-          <div class='container-fluid p-0'>
-
-            <div class='row'>
-              <div class='row m-0 px-3 mt-3 '>
-                <div class='col-12'>
-                  <div class='d-flex align-items-center mb-3'>
-                    <mat-icon class='mr-1 card-icon' color='primary'>people_alt</mat-icon>
-                    <h4 class='mat-h4 mb-0 text-color__primary font-calibri'>Top Watched Test</h4>
-                  </div>
-                </div>
-              </div>
-              <div class='col-12'>
-                <table mat-table [dataSource]='topWatchedTable' class='w-100'>
-                  <ng-container matColumnDef='position'>
-                    <th mat-header-cell *matHeaderCellDef>{{'Position' | titlecase}}</th>
-                    <td mat-cell *matCellDef='let element,  let i = index'
-                    > {{(i+1) || '--'}} </td>
-                  </ng-container>
-                  <ng-container matColumnDef='name'>
-                    <th mat-header-cell  *matHeaderCellDef>{{'Test Name' | titlecase}}</th>
-                    <td mat-cell *matCellDef='let element'
-                        [matTooltip]='element.name'> {{(element.name) || '--'}} </td>
-                  </ng-container>
-                  <ng-container matColumnDef='id'>
-                    <th mat-header-cell *matHeaderCellDef>{{'Test Id' | titlecase}}</th>
-                    <td mat-cell *matCellDef='let element'
-                    > {{(element.id) || '--'}} </td>
-                  </ng-container>
-                  <ng-container matColumnDef='videoPlays'>
-                    <th mat-header-cell *matHeaderCellDef>{{'Video Plays' | titlecase}}</th>
-                    <td mat-cell *matCellDef='let element'
-                    > {{(element.videoPlays) || '--'}} </td>
-                  </ng-container>
-                  <ng-container matColumnDef='resultLog'>
-                    <th mat-header-cell *matHeaderCellDef>{{'Result Log' | titlecase}}</th>
-                    <td mat-cell *matCellDef='let element'
-                    > {{(element.resultLog) || '--'}} </td>
-                  </ng-container>
-                  <tr mat-header-row *matHeaderRowDef='displayedColumnsTopWatched'></tr>
-                  <tr mat-row *matRowDef='let row; columns: displayedColumnsTopWatched;' class='row-react'></tr>
                 </table>
               </div>
             </div>
@@ -236,6 +192,56 @@
           </div>
         </mat-card>
       </div>
+      <div class='col-lg-12 col-md-12  mt-4'>
+        <mat-card class='p-0'>
+
+          <div class='container-fluid p-0'>
+
+            <div class='row'>
+              <div class='row m-0 px-3 mt-3 '>
+                <div class='col-12'>
+                  <div class='d-flex align-items-center mb-3'>
+                    <mat-icon class='mr-1 card-icon' color='primary'>people_alt</mat-icon>
+                    <h4 class='mat-h4 mb-0 text-color__primary font-calibri'>Top(10) Watched Test</h4>
+                  </div>
+                </div>
+              </div>
+              <div class='col-12'>
+                <table mat-table [dataSource]='topWatchedTable' class='w-100'>
+                  <ng-container matColumnDef='position'>
+                    <th mat-header-cell *matHeaderCellDef  >{{'Position' | titlecase}}</th>
+                    <td mat-cell  *matCellDef='let element,  let i = index'
+                    > {{(i+1) || '--'}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef='name'>
+                    <th mat-header-cell  *matHeaderCellDef>{{'Test Name' | titlecase}}</th>
+                    <td mat-cell *matCellDef='let element'
+                        [matTooltip]='element.name'> {{(element.name) || '--'}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef='id'>
+                    <th mat-header-cell *matHeaderCellDef>{{'Test Id' | titlecase}}</th>
+                    <td mat-cell *matCellDef='let element'
+                    > {{(element.id) || '--'}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef='videoPlays'>
+                    <th mat-header-cell *matHeaderCellDef>{{'Video Plays' | titlecase}}</th>
+                    <td mat-cell *matCellDef='let element'
+                    > {{(element.videoPlays) || '--'}} </td>
+                  </ng-container>
+                  <ng-container matColumnDef='resultLog'>
+                    <th mat-header-cell *matHeaderCellDef>{{'Result Log' | titlecase}}</th>
+                    <td mat-cell *matCellDef='let element'
+                    > {{(element.resultLog) || '--'}} </td>
+                  </ng-container>
+                  <tr mat-header-row *matHeaderRowDef='displayedColumnsTopWatched'></tr>
+                  <tr mat-row *matRowDef='let row; columns: displayedColumnsTopWatched;' class='row-react'></tr>
+                </table>
+              </div>
+            </div>
+          </div>
+        </mat-card>
+      </div>
+
 <!--      <div class='col-lg-6 col-md-12 mt-lg-0 mt-3'>-->
 <!--        <div class='row'>-->
 <!--          <ng-template [ngIfElse]='assessmentLoadingElse' [ngIf]='(store.isChangeLoading$ | async)'>-->
