--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -84,6 +84,8 @@
           [nonBinaryBarData]='store.nonBinaryUsers$ | async'
           [ratioChartData]='store.ageRatioData$ | async'></hidden-innovation-dashboard-user-demographic>
       </div>
+    </div>
+    <div class='row'>
       <div class='col-lg-12 col-md-12  mt-4'>
         <mat-card class='p-0'>
 
@@ -111,11 +113,11 @@
                     <td mat-cell *matCellDef='let element'
                         [matTooltip]='element.name'> {{(element.name) || '--'}} </td>
                   </ng-container>
-                  <ng-container matColumnDef='category'>
-                    <th mat-header-cell  *matHeaderCellDef>{{'Assessment category' | titlecase}}</th>
-                    <td mat-cell *matCellDef='let element'
-                        [matTooltip]='element.category'> {{(element.category) || '--'}} </td>
-                  </ng-container>
+<!--                  <ng-container matColumnDef='category'>-->
+<!--                    <th mat-header-cell  *matHeaderCellDef>{{'Assessment category' | titlecase}}</th>-->
+<!--                    <td mat-cell *matCellDef='let element'-->
+<!--                        [matTooltip]='element.category'> {{(element.category) || '&#45;&#45;'}} </td>-->
+<!--                  </ng-container>-->
                   <ng-container matColumnDef='id'>
                     <th mat-header-cell *matHeaderCellDef>{{'Assessment Id' | titlecase}}</th>
                     <td mat-cell *matCellDef='let element'
