feat(dashboard): table ui

--- a/libs/shared/ui/dashboard-user-demographic/src/lib/dashboard-user-demographic.component.html
+++ b/libs/shared/ui/dashboard-user-demographic/src/lib/dashboard-user-demographic.component.html
@@ -171,7 +171,7 @@
                     <div class='col-12'>
                       <button class='w-100' mat-stroked-button [ngStyle]='{"color": colors.other}'>
                         <div class='d-flex align-items-center pt-1 py-0'>
-                          <mat-icon>transgender</mat-icon>
+                          <mat-icon>remove</mat-icon>
                           <div class='d-flex flex-column align-items-center' [ngStyle]='{width: "calc(100% - 42px)"}'>
                             <h4 class='mat-h4 m-0'>Non-Binary</h4>
                             <h2 class='mat-h1 m-0' [ngStyle]='{"color": colors.other}'>{{nonBinaryPercentage}} %</h2>
