--- a/libs/test/test-listing/src/lib/test-listing.component.html
+++ b/libs/test/test-listing/src/lib/test-listing.component.html
@@ -142,7 +142,7 @@
                               <ng-template [ngForOf]='testInputTypeIte' let-type ngFor>
                                 <mat-list-option [value]='type'>
                                   <h6
-                                    class='mat-h6'>{{type | parseOneRem | replaceUnderscore | titlecase}}</h6>
+                                    class='mat-h6'>{{type === testInputTypeEnum.ONE_RM ? ('1RM') : (type | replaceUnderscore | titlecase)}}</h6>
                                 </mat-list-option>
                               </ng-template>
                             </mat-selection-list>
@@ -151,7 +151,7 @@
                       </div>
                     </th>
                     <td *matCellDef='let element'
-                        mat-cell> {{(element.inputType ? (element.inputType | parseOneRem | replaceUnderscore | titlecase) : '--')}} </td>
+                        mat-cell> {{(element.inputType ? (element.inputType === testInputTypeEnum.ONE_RM ? ('1RM') : (element.inputType | replaceUnderscore | titlecase)) : '--')}} </td>
                   </ng-container>
 
                   <ng-container matColumnDef='status'>
