--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -133,9 +133,22 @@
                     <td mat-cell *matCellDef='let element'
                         > {{(element.completion) || '--'}} </td>
                   </ng-container>
-                  <tr mat-header-row *matHeaderRowDef='displayedColumnsAssessmentTest'></tr>
+                  <tr mat-header-row *matHeaderRowDef='displayedColumnsAssessmentTest;'></tr>
                   <tr mat-row *matRowDef='let row; columns: displayedColumnsAssessmentTest;' class='row-react'></tr>
                 </table>
+              </div>
+            </div>
+            <div class='row mt-2'>
+              <div class='col'></div>
+              <div class='col-6'>
+                <mat-paginator
+                  (page)='assessmentEngPageEvent = $event; onPaginateChangeAssessmentEng($event)'
+                  [disabled]='store.isChangeLoading$ | async'
+                  [length]='store.assessmentEngCount$ | async'
+                  [pageIndex]='paginatorIndexAssessmentEng'
+                  [pageSizeOptions]='assessmentEngPageSizeOptions'
+                  [showFirstLastButtons]='false'
+                ></mat-paginator>
               </div>
             </div>
           </div>
@@ -191,6 +204,19 @@
                 </table>
               </div>
             </div>
+            <div class='row mt-2'>
+              <div class='col'></div>
+              <div class='col-6'>
+                <mat-paginator
+                  (page)='packEngPageEvent = $event; onPaginateChangePackEng($event)'
+                  [disabled]='store.isChangeLoading$ | async'
+                  [length]='store.packEngCount$ | async'
+                  [pageIndex]='paginatorIndexPackEng'
+                  [pageSizeOptions]='packEngPageSizeOptions'
+                  [showFirstLastButtons]='false'
+                ></mat-paginator>
+              </div>
+            </div>
           </div>
         </mat-card>
       </div>
@@ -238,6 +264,19 @@
                   <tr mat-header-row *matHeaderRowDef='displayedColumnsTopWatched'></tr>
                   <tr mat-row *matRowDef='let row; columns: displayedColumnsTopWatched;' class='row-react'></tr>
                 </table>
+              </div>
+            </div>
+            <div class='row mt-2'>
+              <div class='col'></div>
+              <div class='col-6'>
+                <mat-paginator
+                  (page)='topWatchedPageEvent = $event; onPaginateChangeTopTest($event)'
+                  [disabled]='store.isChangeLoading$ | async'
+                  [length]='store.testWatchedCount$ | async'
+                  [pageIndex]='paginatorIndexTopTest'
+                  [pageSizeOptions]='topWatchedPageSizeOptions'
+                  [showFirstLastButtons]='false'
+                ></mat-paginator>
               </div>
             </div>
           </div>
