--- a/libs/dashboard/src/lib/dashboard.component.html
+++ b/libs/dashboard/src/lib/dashboard.component.html
@@ -86,12 +86,10 @@
       </div>
     </div>
     <div class='row'>
-      <div class='col-lg-5 col-md-12  mt-4'>
+      <div class='col-lg-6 col-md-12  mt-4'>
         <mat-card class='p-0'>
-
           <div class='container-fluid p-0'>
-
-            <div class='row'>
+            <div class='row m-0'>
               <div class='row m-0 px-3 mt-3 '>
                 <div class='col-12'>
                   <div class='d-flex align-items-center mb-3'>
@@ -102,7 +100,7 @@
                 </div>
               </div>
               <div class='col-12  tableOverFlow'>
-                <table mat-table [dataSource]='assessmentTestTable' class='w-100'>
+                <table mat-table [dataSource]='assessmentTestTable' style='width: 60vw'>
                   <ng-container matColumnDef='position'>
                     <th mat-header-cell *matHeaderCellDef>{{'Position' | titlecase}}</th>
                     <td mat-cell *matCellDef='let element,let i = index'
@@ -149,10 +147,10 @@
           </div>
         </mat-card>
       </div>
-      <div class='col-lg-7 col-md-12  mt-4'>
+      <div class='col-lg-6 col-md-12  mt-4'>
         <mat-card class='p-0'>
           <div class='container-fluid p-0'>
-            <div class='row'>
+            <div class='row m-0'>
               <div class='row m-0 px-3 mt-3 '>
                 <div class='col-12'>
                   <div class='d-flex align-items-center mb-3'>
@@ -163,7 +161,7 @@
                 </div>
               </div>
               <div class='col-12 tableOverFlow'>
-                <table mat-table [dataSource]='packEngTable' class='w-100'>
+                <table mat-table [dataSource]='packEngTable' style='width: 60vw'>
                   <ng-container matColumnDef='position'>
                     <th mat-header-cell *matHeaderCellDef>{{'Position' | titlecase}}</th>
                     <td mat-cell *matCellDef='let element, let i = index'
@@ -175,7 +173,7 @@
                         [matTooltip]='element.name'> {{(element.name) || '--'}} </td>
                   </ng-container>
                   <ng-container matColumnDef='id'>
-                    <th mat-header-cell *matHeaderCellDef >{{'Pack Id' | titlecase}}</th>
+                    <th mat-header-cell [width]='100' *matHeaderCellDef >{{'Pack Id' | titlecase}}</th>
                     <td mat-cell *matCellDef='let element'
                     > {{(element.id) || '--'}} </td>
                   </ng-container>
